<resources>
    <string name="app_name">Đố Vui</string>
    <string name="choimoi">Chơi mới</string>
    <string name="luatchoi">Luật chơi</string>
    <string name="diemcao">Điểm cao</string>
    <string name="caidat">Cài đặt</string>
    <string name="thoat">Thoát</string>
    <string name="luat1">- Người chơi sẽ có câu hỏi và 4 phương án để chọn, mỗi câu hỏi có 16 giây để suy nghĩ</string>
    <string name="luat2">- Được phép trả lời sai 3 lần</string>
    <string name="luat3">- Nếu trả lời sai đến lần thứ 4 lượt chơi    sẽ kết thúc và hệ thống sẽ tính điểm</string>
    <string name="luat4">- Không giới hạn số lần sử dụng gợi ý, mỗi lần sử dụng gợi ý người chơi sẽ bị trừ 20 điểm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diem">Điểm : </string>
    <string name="dongu">Độ ngu : </string>
    <string name="tieusucvat">Tiểu súc vật</string>
    <string name="tacgia">Tác giả : </string>
    <string name="tiepde"><![CDATA[TIẾP ĐÊ >>>]]></string>
    <string name="dung">Đúng rồi!</string>
    <string name="sairoi">Sai rồi !</string>
    <string name="laiphat">Lại phát !</string>
    <string name="ten">Nhập tên của bạn</string>
    <string name="ok">Okay (*_*)</string>
    <string name="top">TOP</string>
    <string name="stt">Stt</string>
    <string name="name">Tên</string>
    <string name="diemm">Điểm</string>
    <string name="cauhoi">Câu hỏi :</string>
    <string name="GoiY">Gợi ý</string>

</resources>
