<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DiemCaoActivity"
    android:background="@color/bg">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:onClick="back_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/btn_back_24dp"
            tools:ignore="VectorDrawableCompat" />
    </FrameLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/top" />

    <TextView
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/top"
        android:textSize="36sp"
        android:textColor="@color/cam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>


    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingLeft="12dp"
            android:textSize="26sp"
            android:textColor="@color/cam"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/stt" />

        <TextView
            android:textSize="26sp"
            android:textColor="@color/cam"
            android:fontFamily="@font/roboto_condensed_bold"
            android:padding="8dp"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:textSize="26sp"
            android:textColor="@color/cam"
            android:fontFamily="@font/roboto_condensed_bold"
            android:padding="8dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/diemm" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/rcView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>