<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CMoiFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="-10dp"
            android:textSize="16dp"
            android:id="@+id/tv_ch"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/chat2"
            android:gravity="center"
            android:text="TextView" />

        <ImageView
            android:layout_marginRight="8dp"
            android:id="@+id/img_GoiYYY"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom|right"
            android:layout_marginTop="190dp"
            android:src="@drawable/hutthuoc" />

        <ImageView
            android:layout_marginLeft="200dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom"
            android:id="@+id/img_MuiGoi"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/goiyy" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:padding="8dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textSize="18sp"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cauhoi" />

            <TextView
                android:textSize="18dp"
                android:id="@+id/tv_Cauhoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/30" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textSize="18sp"
                android:layout_marginRight="8dp"
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diem" />

            <TextView
                android:textSize="18dp"
                android:id="@+id/tv_Diem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textSize="18sp"
                android:layout_marginRight="8dp"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dongu" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/tv_Dongu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:textSize="18sp"
                android:layout_marginRight="8dp"
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tacgia" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/tv_Tac_gia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tieusucvat" />
        </LinearLayout>

    </LinearLayout>

        <TextView
            android:textStyle="bold"
            android:textSize="26sp"
            android:id="@+id/tv_Time"
            android:gravity="center"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bamgio"
            android:layout_gravity="right|bottom"
            android:text="60"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="16dp"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="horizontal">

    <TextView
        android:textSize="16dp"
        android:clickable="true"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="left"
        android:padding="8dp"
        android:background="@drawable/tv_choi"
        android:id="@+id/tv_A"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:text="TextView" />

    <TextView
        android:layout_gravity="right"
        android:textSize="16dp"
        android:clickable="true"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:background="@drawable/tv_choi"
        android:id="@+id/tv_B"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:text="TextView" />
</FrameLayout>
    <FrameLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal">

        <TextView
            android:textSize="16dp"
            android:clickable="true"
            android:layout_gravity="left"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/tv_choi"
            android:id="@+id/tv_C"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:text="TextView" />

        <TextView
            android:padding="8dp"
            android:id="@+id/tv_D"
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:background="@drawable/tv_choi"
            android:clickable="true"
            android:gravity="center"
            android:layout_gravity="right"
            android:text="TextView"
            android:textSize="16dp" />

    </FrameLayout>

</LinearLayout>